fixed spacing on unarchive panel

--- a/browser/components/BoardShowPage/MenuSideBar/index.sass
+++ b/browser/components/BoardShowPage/MenuSideBar/index.sass
@@ -198,10 +198,9 @@
     display: flex
     overflow-y: scroll
     overflow-x: hidden
-    flex-direction: column
+    flex-direction: row
     flex-wrap: nowrap
     padding: 0 10px
-    min-height: 30%
     &-Header
       display: flex
       align-items: flex-start
@@ -235,8 +234,10 @@
 
     &-item
       margin-top: 8px
+
     &-list
       margin-right: 200px
+
 
 
     &-UnarchiveButton
